# iglegais

./: .gitignore  LICENSE  README.md  autotest.py  benchmark.py  extract.py  install.ps1  install.sh  mg.py  multihop.py  pyproject.toml  realtest.py  requirements.txt  server.py  stress_test.py  temporal_test.py  verify.py  verify_local.py
iglegais/: __init__.py  embedding.py  extract.py  home.py  local.py  mg.py  server.py  setup_cmd.py
